5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1664_1394.log
== TEST (2019-04-16 11:03:28) 
-- CODE:
h = float(input("horas trabalhadas: "))
h50 = h . 50
h70 = (h . 50) + 70
if (h > 20):
	print(h70)
else:
	print(h50)
	
-- ERROR:
File "XXXX", line 2
    h50 = h . 50
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:03:32) 
-- CODE:
h = float(input("horas trabalhadas: "))
h50 = h . 50
h70 = (h . 50) + 70
if (h > 20):
	print(h70)
else:
	print(h50)
	
-- ERROR:
File "XXXX", line 2
    h50 = h . 50
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:03:56) 
-- CODE:
h = float(input("horas trabalhadas: "))
h50 = h . 50
h70 = (h . 50) + 70
if (h > 20):
	print(h70)
else:
	print(h50)
	
-- ERROR:
File "XXXX", line 2
    h50 = h . 50
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:04:01) 
-- CODE:
h = float(("horas trabalhadas: "))
h50 = h . 50
h70 = (h . 50) + 70
if (h > 20):
	print(h70)
else:
	print(h50)
	
-- ERROR:
File "XXXX", line 2
    h50 = h . 50
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:04:23) 
-- CODE:
h = int(input("horas trabalhadas: "))
h50 = h . 50
h70 = (h . 50) + 70
if (h > 20):
	print(h70)
else:
	print(h50)
	
-- ERROR:
File "XXXX", line 2
    h50 = h . 50
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:05:05) 
-- CODE:
h = float(input("horas trabalhadas: "))
h50 = h . 50
h70 = (h . 50) + 70
if (h > 20):
	print(round(h70,2))
else:
	print(round(h50,2))
	
-- ERROR:
File "XXXX", line 2
    h50 = h . 50
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:05:39) 
-- CODE:
h = float(input("horas trabalhadas: "))

h50 = h . 50
h70 = (h . 50) + 70
if (h > 20):
	print(round(h70,2))
else:
	print(round(h50,2))
	
-- ERROR:
File "XXXX", line 3
    h50 = h . 50
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:06:13) 
-- CODE:
h = float(input("horas trabalhadas: "))

h50 = h . 50
h70 = (h . 50) + 70
if (h > 20):
	print(round(h70,2))
else:
	print(round(h50,2))
	
-- ERROR:
File "XXXX", line 3
    h50 = h . 50
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:06:30) 
-- CODE:
H = float(input("horas trabalhadas: "))

h50 = h . 50
h70 = (h . 50) + 70
if (h > 20):
	print(round(h70,2))
else:
	print(round(h50,2))
	
-- ERROR:
File "XXXX", line 3
    h50 = h . 50
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:06:50) 
-- CODE:
h = float(input("horas trabalhadas: "))

h50 = h * 50
h70 = (h * 50) + 70
if (h > 20):
	print(round(h70,2))
else:
	print(round(h50,2))
	
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:07:00) 
-- CODE:
h = float(input("horas trabalhadas: "))

h50 = h * 50
h70 = (h * 50) + 70
if (h > 20):
	print(round(h70,2))
else:
	print(round(h50,2))
	
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:07:48) 
-- CODE:
h = float(input("horas trabalhadas: "))

h50 = h * 50
h70 = (h * 50) +(h-20) *70
if (h > 20):
	print(round(h70,2))
else:
	print(round(h50,2))
	
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:08:41) 
-- CODE:
h = float(input("horas trabalhadas: "))

h50 = h * 50
h70 = ((h * 50) - 100) +(h-20) *70
if (h > 20):
	print(round(h70,2))
else:
	print(round(h50,2))
	
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:08:48) 
-- CODE:
h = float(input("horas trabalhadas: "))

h50 = h * 50
h70 = ((h * 50) - 100) +(h-20) *70
if (h > 20):
	print(round(h70,2))
else:
	print(round(h50,2))
	
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:09:15) 
-- CODE:
h = float(input("horas trabalhadas: "))

h50 = h * 50
h70 = ((h * 50) - 100) +(h-20) *70
if (h > 20):
	print(round(h70,2))
else:
	print(round(h50,2))
	
-- EXECUTION TIME:
0.237208
-- TEST CASE 1:
---- input:
15
---- correct output:
750.0
---- user output:
750.0
-- TEST CASE 2:
---- input:
45
---- correct output:
2750.0
---- user output:
3900.0
-- TEST CASE 3:
---- input:
48
---- correct output:
2960
---- user output:
4260.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:12:40) 
-- CODE:
h = float(input("horas trabalhadas: "))

h50 = h * 50
x = h-20
h70 = ((h * 50) - (x * 50)) +(x) *70
if (h > 20):
	print(round(h70,2))
else:
	print(round(h50,2))
	
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:12:49) 
-- CODE:
h = float(input("horas trabalhadas: "))

h50 = h * 50
x = h-20
h70 = ((h * 50) - (x * 50)) +(x) *70
if (h > 20):
	print(round(h70,2))
else:
	print(round(h50,2))
	
-- OUTPUT:
750.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:12:56) 
-- CODE:
h = float(input("horas trabalhadas: "))

h50 = h * 50
x = h-20
h70 = ((h * 50) - (x * 50)) +(x) *70
if (h > 20):
	print(round(h70,2))
else:
	print(round(h50,2))
	
-- EXECUTION TIME:
0.127298
-- TEST CASE 1:
---- input:
15
---- correct output:
750.0
---- user output:
750.0
-- TEST CASE 2:
---- input:
45
---- correct output:
2750.0
---- user output:
2750.0
-- TEST CASE 3:
---- input:
48
---- correct output:
2960
---- user output:
2960.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
